--- a/client/src/components/Auth/_Profile.scss
+++ b/client/src/components/Auth/_Profile.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-  
+
     &__info {
         display: flex;
         width: 90%;
@@ -14,36 +14,41 @@
         flex-direction: column;
         justify-content: space-between;
 
-       .profile-info{
-           display:flex;
-           justify-content: space-between;
-           border-bottom: 1px solid map-get($colors, secondary-200);           
-         button{           
-            background-color: map-get($colors, primary);
-            border: 1px solid map-get($colors, secondary-200);
-            box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-            width: 73px;            
-            padding: 4px 5px;
-            color: map-get($colors, secondary-200)
-         }
-       }
+        .profile-info {
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid map-get($colors, secondary-200);
+            button {
+                background-color: map-get($colors, primary);
+                border: 1px solid map-get($colors, secondary-200);
+                box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
+                    0 2px 4px -1px rgba(0, 0, 0, 0.2);
+                width: 73px;
+                padding: 4px 5px;
+                color: map-get($colors, secondary-200);
+            }
+        }
         .profile-add-recipe {
             display: flex;
-            justify-content: center;          
-            a{
-                width:max-content;
-                padding:5px 12px;
+            justify-content: center;
+            a {
+                width: max-content;
+                padding: 5px 12px;
                 font-size: 12px;
             }
-
         }
         .recipes-section {
             display: flex;
             justify-content: space-around;
             width: 100%;
+            .disabled {
+                pointer-events: none;
+                opacity: 0.4;
+            }
             &__items {
                 border: 1px solid map-get($colors, secondary-200);
-                box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+                box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
+                    0 2px 4px -1px rgba(0, 0, 0, 0.2);
                 border-radius: 5px;
                 padding: 2px 5px;
                 h5,
@@ -54,19 +59,25 @@
                 h5 {
                     font-size: 14px;
                 }
-                &:hover{
+                &:hover {
                     background-color: map-get($colors, primary-500);
                     cursor: pointer;
                 }
             }
-
         }
-     
     }
-    .selected-recipes{
-        display:flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+    .profile-recipe-container {
+        display: flex;
+        width: 100%;
         justify-content: center;
+
+        .selected-recipes-own,
+        .selected-recipes-fav {
+            display: none;
+            width:100%;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }       
     }
 }
